source/features/table-input.css
:root {
	--rgh-table-input-size: 40px;
}

:root:root:root:root .rgh-table-input {
	font-size: var(--rgh-table-input-size);
	padding: 3px;
	z-index: 99;
	display: grid !important;
	grid-template: repeat(5, 1em) / repeat(5, 1em);
	width: fit-content;
	height: fit-content;
	margin: auto;
}

.ActionBar-item-container:has(.rgh-table-input) {
	overflow: visible;
}

:root .rgh-tic {
	padding: 1px;
	display: grid;
}

.rgh-tic::before {
	content: '';
	align-self: stretch;
	border: 2px solid var(--rgh-border-color, fuchsia);
	border-radius: 2px;
}

@media screen and (width >= 768px) {
	:root {
		/* #6511 */
		--rgh-table-input-size: 20px;
	}
}

.rgh-tic:hover::before,
/* Hovering the 1st column */
.rgh-tic:is(:nth-of-type(5n+1)):has(
	~ .rgh-tic:hover:nth-of-type(5n+1)
)::before,
/* Hovering the 2nd column */
.rgh-tic:is(:nth-of-type(5n+1), :nth-of-type(5n+2)):has(
	~ .rgh-tic:hover:nth-of-type(5n+2)
)::before,
/* Hovering the 3rd column */
.rgh-tic:not(:nth-of-type(5n+4), :nth-of-type(5n+5)):has(
	~ .rgh-tic:hover:nth-of-type(5n+3)
)::before,
/* Hovering the 4th column */
.rgh-tic:not(:nth-of-type(5n+5)):has(
	~ .rgh-tic:hover:nth-of-type(5n+4)
)::before,
/* Hovering the 5th column */
.rgh-tic:has(~ .rgh-tic:hover:nth-of-type(5n+5))::before {
	border-color: var(--borderColor-accent-muted, fuchsia);
	background-color: var(--bgColor-accent-muted, fuchsia);
}

/* https://github.com/refined-github/refined-github/issues/6515 */
.rgh-table-input .sentinel {
	display: none;
}

